--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^6.1.0",
+    "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.6.2",
+    "lucide-react": "^0.484.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-confetti": "^6.4.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.1",
+    "tailwindcss": "^4.0.17",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
